# production-rag-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/rag_pipeline/: config.py  main.py
src/rag_pipeline/evaluation/: evaluator.py
src/rag_pipeline/generation/: generator.py
src/rag_pipeline/ingestion/: loader.py
src/rag_pipeline/retrieval/: vector_store.py
src/rag_pipeline/utils/: logger.py
tests/: test_ingestion.py
