[tool.poetry]
name = "production-rag-system"
version = "0.1.0"
description = "A production-grade RAG pipeline with advanced retrieval, reranking, and evaluation."
authors = ["Antigravity <antigravity@google.com>"]
readme = "README.md"
packages = [{include = "rag_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
chromadb = "^0.4.22"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
ragas = "^0.0.22"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "PL"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
